# simons

./: .gitignore  README.md  all_files_names.txt  allele_counts.tsv  pyproject.toml  requirements.txt  run.py  scratchpad.ipynb  tasks.sh  workflow.ipynb
src/: allele_counter.py  run.py
tests/: conftest.py  test_allele_counter.py
